# flow-matching-cifar10

./: .gitignore  README.md  data.py  evaluate.py  flow_matching_cifar10.ipynb  pyproject.toml  sampler.py  trainer.py
models/: __init__.py  unet.py
tests/: conftest.py  test_data.py  test_sampler.py  test_trainer.py  test_unet.py
